--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/AzamiIcon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sus"
+      content="¡Sé el mejor en el mágico mundo de [idk]! Compite con tu gremio, forja amistades y realiza emocionantes aventuras."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/AzamiIcon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Azami web - Genera actividad en tu servidor.</title>
+    <title>Azami - Genera actividad en tu servidor.</title>
   </head>
   <body>
     <noscript>¡Ooops! No puedo ejecutarme como deseo si no está habilitado javascript; por favor, habilita javascript. n.n</noscript>
