--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/AzamiIcon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#f8bcf0" />
     <meta
       name="description"
-      content="¡Sé el mejor en el mágico mundo de [idk]! Compite con tu gremio, forja amistades y realiza emocionantes aventuras."
+      content="¡Sé el mejor en el mágico mundo y conquista todo! Compite con tu gremio, forja amistades y realiza emocionantes aventuras."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/AzamiIcon.ico" />
+    <meta property="og:title" content="Azami"/>
+    <meta property="og:description" content="¡Hola! Soy Azami. Una bot que traerá entretenimiento e interacción a tu servidor."/>
+    <meta property="og:url" content="https://azamibot.xyz" />
+    <meta property="og:image" content="%PUBLIC_URL%/AzamiIcon.ico" />
+    <meta property="og:image:width" content="64" />
+    <meta property="og:image:height" content="64" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/media/iconAzami.9bb96df0.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Azami - Genera actividad en tu servidor.</title>
   </head>
